# pyonetp

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/pyonetp/: cli.py  exceptions.py  operations.py
tests/: test_cli.py  test_operations.py
tests/samples/: i1k1  i1k1k2  i1k3  i2k1  input1  input2  key1  key2
